# fastapi-share-core

./: README.md  alembic.ini  pyproject.toml  requirements.txt
app/: main.py
env/: core.env
fastapi_share_core/: __init__.py  celery.py  config.py  db.py  log.py  redis.py  service.py
fastapi_share_core/exception/: __init__.py  error.py
fastapi_share_core/meta/: data_service.py  db_service.py  singleton.py
fastapi_share_core/plugins/rbac/: __init__.py
fastapi_share_core/plugins/rbac/data/: models.py  schemas.py
fastapi_share_core/plugins/rbac/mapper/: role.py  role_permission.py
fastapi_share_core/plugins/rbac/routers/: role.py  role_permission.py
fastapi_share_core/service/: db.py  redis.py
